Adjust assertions for repo mapping manifest